.gitignore for contract

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Archivo de contrato de servicios (privado)
+contrato_servicios_app.txt
 # Archivos privados
 credenciales_privadas.txt
 notas_privadas.txt
